[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "components"
version = "0.1.1"
description = "Reusable Django components for building web applications"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.0",
    "laces>=0.1.2",
    "django-widget-tweaks>=1.5.1",
]
